# quotesgeneratorapi

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  quotes.py  setup.cfg  setup.py
quotesgeneratorapi_wrapper/: __init__.py  quotesgenerator.py
quotesgeneratorapi_wrapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/quotesgenerator/: main.py
src/quotesgeneratorapi_wrapper/: __init__.py  quotesgenerator.py
src/quotesgeneratorapi_wrapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
