[tool.poetry]
name = "quotesgeneratorapi-wrapper"
version = "2025.01.01"
description = "A wrapper for quotes from API Ninjas"
authors = ["tct123 <42028373+tct123@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
