[project]
name = "quotesgeneratorapi-wrapper"
version = "2026.01.02"
description = "A wrapper for quotes from API Ninjas"
authors = [
    { name = "tct123", email = "42028373+tct123@users.noreply.github.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = ["requests"]

[tool.poetry]
packages = [{ include = "quotesgeneratorapi_wrapper", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
