[metadata]
name = quotesgeneratorapi-wrapper
version = 0.0.4
author = tct123
author_email = tct1234@protonmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tct123/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires = file: ["requirements.txt"]

[options.packages.find]
where = src
